Fixed onboardin spacing when selecting themes (closes https://github.com/zen-browser/desktop/issues/4037) (https://github.com/zen-browser/desktop/issues/4035)

--- a/src/browser/components/zen-welcome/welcome.css
+++ b/src/browser/components/zen-welcome/welcome.css
@@ -131,13 +131,19 @@ h2 {
   justify-content: start;
 }
 
-.page-split:not(#import) > div:first-child {
+.page-split:not(#import, #theme) > div:first-child {
   margin-bottom: 20px;
 }
 
 :not(#theme) .card h3 {
   margin: auto;
   text-align: center;
+}
+
+#theme {
+  & > div:first-child p {
+    margin-bottom: 0 !important;
+  }
 }
 
 #theme .card[disabled='true'] {
